2004-01-02  Jordi Mallach  <jordi@sindominio.net>

	* src/modules_api.[ch], src/net.c: Unapply plugin patch which was
	causing segfaults.

	* Makefile.am (EXTRA_DIST): Add
	intltool-modules/XML/Parser/Style/OrigTree.pm.

	* NEWS: Updated.
	
	* configure.ac: Released gnome-mud 0.10.4a.

2003-12-22  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): Duh, remove configure.in.

2003-12-22  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated for 0.10.4.
	
	* configure.ac: Release gnome-mud 0.10.4.

2003-12-19  Robin Ericsson  <lobbin@localhost.nu>

	* Applied patch from Quim Rovira.

	* NEWS: Updated.
	
	* src/modules_api.c (plugin_connection_send): Added.

	* src/modules_api.h (plugin_connection_send): Prototype added.

	* src/net.c (action_send_to_connection): Adds an extra \n so that
	trigger parsing will only occur once.
	(connection_send_data): Pass data through plugins registerd for
	outbound data.
	
2003-12-18  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated.

2003-12-18  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c (check_aliases): Remove alias nesting.
	Only check first word of input string for alises.

2003-12-18  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: <menthaway> Oskuro: Wasn't Toto a band? ;-)
	Or in other words, fix a silly typo.

2003-12-17  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: Added missing <long> descriptions.

2003-12-17  Robin Ericsson  <lobbin@localhost.nu>

	* configure.ac: Added checkes for time.h and sys/time.h

	* gnome-mud.schemas.in: Added key functionality/flush_interval

	* src/gnome-mud [connection_data]: Added last_log_flush.
	[system_data]: Added FlushInterval.

	* src/init.c (create_connection_data): Added current timestamp to new
	connection.

	* src/prefs.c (prefs_gconf_changed): Added flush_interval key.
	(load_prefs): Ditto.

	* src/window.c: Added extern prefs.
	(textfield_add): flush logfiles if a certain gconf settable amount